<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.chauncy</groupId>
    <artifactId>Utils</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <name>Utils</name>
    <modules>
        <module>Agent</module>
        <module>Common</module>
        <module>Tools/GenProtoMsg</module>
        <module>Message</module>
        <module>Game</module>
        <module>Apt-processor</module>
        <module>Template</module>
        <module>Tools/GenTemplate</module>
    </modules>

    <properties>
        <!-- 特殊保留属性，用于多模块动态版本管理(maven 3.5+)，支持命令行使用-Drevision=1.0.0覆盖-->
        <revision>1.0</revision>

        <auto-service.version>1.1.1</auto-service.version>
        <javapoet.version>1.13.0</javapoet.version>

        <slf4j.version>2.0.17</slf4j.version>
        <log4j.version>2.20.0</log4j.version>
        <jupiter.version>5.12.0</jupiter.version>
        <mockito.version>5.12.0</mockito.version>
        <junit.version>3.8.1</junit.version>
        <lombok.version>1.18.30</lombok.version>

        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- slf4j-log4j2 -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <!-- junit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <!-- 编译插件 -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <encoding>UTF8</encoding>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                    </configuration>
                </plugin>

                <!-- 源码插件 -->
                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.0</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <!-- 打包插件 -->
                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.0</version>
                    <configuration>
                        <!-- 将module-info打包 -->
                        <includes>
                            <include>module-info.class</include>
                            <include>**/*</include>
                        </includes>
                    </configuration>
                </plugin>

                <!-- 展平maven插件，会生成.flattened-pom.xml -->
                <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/flatten-maven-plugin -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>1.7.0</version>
                    <configuration>
                        <updatePomFile>true</updatePomFile>
                        <flattenMode>oss</flattenMode>
                    </configuration>
                    <executions>
                        <execution>
                            <id>flatten</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>flatten</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>flatten.clean</id>
                            <phase>clean</phase>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>
</project>
